tests/invalid/inherit/03_override_bad_signature.cps
class A { function f(a: integer): integer { return a; } }
class B : A { function f(a: string): integer { return 0; } }  // param diferente
